--- a/.github/workflows/strix.yml
+++ b/.github/workflows/strix.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           STRIX_LLM: ${{ secrets.STRIX_LLM }}
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
-          LLM_API_BASE: ${{ secrets.LLM_API_BASE }}
-          PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
+          # LLM_API_BASE: ${{ secrets.LLM_API_BASE }}
+          # PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
 
         run: strix -n -t ./
