--- a/.github/workflows/process-diary.yml
+++ b/.github/workflows/process-diary.yml
@@ -5,10 +5,12 @@ on:
     branches: ["main"]
     paths:
       - "content/posts/*.md"
+  schedule:
+    - cron: "0 */6 * * *"  # every 6 hours, catch any missed posts
   workflow_dispatch:
     inputs:
       post_file:
-        description: "Post filename (e.g., 2026-02-25-day7.md)"
+        description: "Specific post (e.g., content/posts/2026-02-25-day7.md). Leave empty to auto-detect."
         required: false
       force:
         description: "Force regenerate all assets"
@@ -32,37 +34,73 @@ jobs:
   detect:
     runs-on: ubuntu-latest
     outputs:
-      new_posts: ${{ steps.detect.outputs.new_posts }}
-      has_new: ${{ steps.detect.outputs.has_new }}
+      posts_to_process: ${{ steps.detect.outputs.posts_to_process }}
+      has_work: ${{ steps.detect.outputs.has_work }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
 
-      - name: Detect new Chinese diary posts
+      - name: Detect posts needing processing
         id: detect
         run: |
+          FORCE="${{ github.event.inputs.force }}"
+
+          # If specific post given, use it
           if [ -n "${{ github.event.inputs.post_file }}" ]; then
-            echo "new_posts=${{ github.event.inputs.post_file }}" >> $GITHUB_OUTPUT
-            echo "has_new=true" >> $GITHUB_OUTPUT
+            echo "posts_to_process=${{ github.event.inputs.post_file }}" >> $GITHUB_OUTPUT
+            echo "has_work=true" >> $GITHUB_OUTPUT
             exit 0
           fi
 
-          NEW_POSTS=$(git diff --name-only HEAD~1 HEAD -- 'content/posts/*.md' | grep -v '\-en\.' | grep -v '\.en\.' || true)
+          # Scan ALL Chinese posts, find those missing assets
+          NEEDS_WORK=""
+          for POST in content/posts/*.md; do
+            BASENAME=$(basename "$POST" .md)
 
-          if [ -z "$NEW_POSTS" ]; then
-            echo "has_new=false" >> $GITHUB_OUTPUT
-            echo "No new Chinese posts found."
+            # Skip English versions
+            echo "$BASENAME" | grep -qE '\-en$|\.en$' && continue
+
+            if [ "$FORCE" = "true" ]; then
+              NEEDS_WORK="$NEEDS_WORK $POST"
+              continue
+            fi
+
+            MISSING=""
+
+            # Check summary in frontmatter
+            grep -q '^summary:' "$POST" || MISSING="summary"
+
+            # Check cover image
+            [ -f "static/covers/${BASENAME}.png" ] || [ -f "static/covers/${BASENAME}.jpg" ] || MISSING="$MISSING cover"
+
+            # Check English version
+            EN_FILE="content/posts/${BASENAME}-en.md"
+            [ -f "$EN_FILE" ] || MISSING="$MISSING en"
+
+            # Check Chinese audio
+            [ -f "static/audio/${BASENAME}.mp3" ] || MISSING="$MISSING audio_zh"
+
+            # Check English audio
+            [ -f "static/audio/${BASENAME}-en.mp3" ] || MISSING="$MISSING audio_en"
+
+            if [ -n "$MISSING" ]; then
+              echo "📋 $BASENAME missing:$MISSING"
+              NEEDS_WORK="$NEEDS_WORK $POST"
+            fi
+          done
+
+          NEEDS_WORK=$(echo "$NEEDS_WORK" | xargs)
+          if [ -z "$NEEDS_WORK" ]; then
+            echo "has_work=false" >> $GITHUB_OUTPUT
+            echo "✅ All posts have complete assets."
           else
-            POSTS_LINE=$(echo "$NEW_POSTS" | tr '\n' ' ')
-            echo "new_posts=$POSTS_LINE" >> $GITHUB_OUTPUT
-            echo "has_new=true" >> $GITHUB_OUTPUT
-            echo "New posts: $POSTS_LINE"
+            echo "posts_to_process=$NEEDS_WORK" >> $GITHUB_OUTPUT
+            echo "has_work=true" >> $GITHUB_OUTPUT
+            echo "🔧 Posts to process: $NEEDS_WORK"
           fi
 
   process:
     needs: detect
-    if: needs.detect.outputs.has_new == 'true'
+    if: needs.detect.outputs.has_work == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -88,41 +126,34 @@ jobs:
           CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           FORCE: ${{ github.event.inputs.force }}
         run: |
-          for POST_FILE in ${{ needs.detect.outputs.new_posts }}; do
+          for POST_FILE in ${{ needs.detect.outputs.posts_to_process }}; do
             echo "=== Processing: $POST_FILE ==="
 
             BASENAME=$(basename "$POST_FILE" .md)
             DIR=$(dirname "$POST_FILE")
 
-            if echo "$BASENAME" | grep -qE '\-en$|\.en$'; then
-              echo "⏭️ Skipping English file: $POST_FILE"
-              continue
-            fi
+            echo "$BASENAME" | grep -qE '\-en$|\.en$' && continue
 
             EN_FILE="${DIR}/${BASENAME}-en.md"
-            COVER_FILE="static/covers/${BASENAME}.png"
+            COVER_PNG="static/covers/${BASENAME}.png"
+            COVER_JPG="static/covers/${BASENAME}.jpg"
             AUDIO_ZH="static/audio/${BASENAME}.mp3"
             AUDIO_EN="static/audio/${BASENAME}-en.mp3"
 
-            # --- Helper: check if frontmatter has a field ---
-            has_field() {
-              grep -q "^$1:" "$2" 2>/dev/null
-            }
-
             # --- 1. Chinese Summary ---
-            if [ "$FORCE" = "true" ] || ! has_field summary "$POST_FILE"; then
+            if [ "$FORCE" = "true" ] || ! grep -q '^summary:' "$POST_FILE"; then
               echo "📝 Generating Chinese summary..."
               python3 scripts/generate_summary.py "$POST_FILE" zh
             else
-              echo "⏭️ Summary already exists"
+              echo "⏭️ Summary exists"
             fi
 
             # --- 2. Cover Image ---
-            if [ "$FORCE" = "true" ] || ! [ -f "$COVER_FILE" ]; then
-              echo "🎨 Generating cover image..."
-              python3 scripts/generate_cover.py "$POST_FILE" || echo "⚠️ Cover generation failed"
+            if [ "$FORCE" = "true" ] || { ! [ -f "$COVER_PNG" ] && ! [ -f "$COVER_JPG" ]; }; then
+              echo "🎨 Generating cover..."
+              python3 scripts/generate_cover.py "$POST_FILE" || echo "⚠️ Cover failed"
             else
-              echo "⏭️ Cover already exists: $COVER_FILE"
+              echo "⏭️ Cover exists"
             fi
 
             # --- 3. English Translation ---
@@ -130,25 +161,25 @@ jobs:
               echo "🌐 Translating to English..."
               python3 scripts/translate_post.py "$POST_FILE" "$EN_FILE"
             else
-              echo "⏭️ English version already exists: $EN_FILE"
+              echo "⏭️ English version exists"
             fi
 
             # --- 4. Chinese Audio ---
             if [ "$FORCE" = "true" ] || ! [ -f "$AUDIO_ZH" ]; then
-              echo "🔊 Generating Chinese audio..."
+              echo "🔊 Chinese audio..."
               python3 scripts/generate_audio.py "$POST_FILE" zh "$AUDIO_ZH" || echo "⚠️ Chinese TTS failed"
             else
-              echo "⏭️ Chinese audio already exists: $AUDIO_ZH"
+              echo "⏭️ Chinese audio exists"
             fi
 
             # --- 5. English Audio ---
             if [ "$FORCE" = "true" ] || ! [ -f "$AUDIO_EN" ]; then
               if [ -f "$EN_FILE" ]; then
-                echo "🔊 Generating English audio..."
+                echo "🔊 English audio..."
                 python3 scripts/generate_audio.py "$EN_FILE" en "$AUDIO_EN" || echo "⚠️ English TTS failed"
               fi
             else
-              echo "⏭️ English audio already exists: $AUDIO_EN"
+              echo "⏭️ English audio exists"
             fi
 
             echo "=== Done: $POST_FILE ==="
@@ -168,6 +199,7 @@ jobs:
 
   build-deploy:
     needs: process
+    if: always() && needs.process.result != 'skipped'
     runs-on: ubuntu-latest
     environment:
       name: github-pages
