feat: 实现多语言支持和国际化配置
重构项目支持多语言，添加中文和英文内容，优化工作流和配置
- 添加多语言i18n文件，支持中英文切换
- 重构hugo.toml配置支持多语言站点
- 添加中英文双语内容，包括关于页面和日记文章
- 优化GitHub工作流处理多语言内容
- 更新.gitignore排除生成文件

--- a/.github/workflows/process-diary.yml
+++ b/.github/workflows/process-diary.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - "content/posts/*.md"
   schedule:
-    - cron: "0 */6 * * *"  # every 6 hours, catch any missed posts
+    - cron: "0 */6 * * *" # every 6 hours, catch any missed posts
   workflow_dispatch:
     inputs:
       post_file:
@@ -53,11 +53,8 @@ jobs:
 
           # Scan ALL Chinese posts, find those missing assets
           NEEDS_WORK=""
-          for POST in content/posts/*.md; do
-            BASENAME=$(basename "$POST" .md)
-
-            # Skip English versions
-            echo "$BASENAME" | grep -qE '\-en$|\.en$' && continue
+          for POST in content/posts/*.zh.md; do
+            BASENAME=$(basename "$POST" .zh.md)
 
             if [ "$FORCE" = "true" ]; then
               NEEDS_WORK="$NEEDS_WORK $POST"
@@ -73,7 +70,7 @@ jobs:
             [ -f "static/covers/${BASENAME}.png" ] || [ -f "static/covers/${BASENAME}.jpg" ] || MISSING="$MISSING cover"
 
             # Check English version
-            EN_FILE="content/posts/${BASENAME}-en.md"
+            EN_FILE="content/posts/${BASENAME}.en.md"
             [ -f "$EN_FILE" ] || MISSING="$MISSING en"
 
             # Check Chinese audio
@@ -129,12 +126,10 @@ jobs:
           for POST_FILE in ${{ needs.detect.outputs.posts_to_process }}; do
             echo "=== Processing: $POST_FILE ==="
 
-            BASENAME=$(basename "$POST_FILE" .md)
+            BASENAME=$(basename "$POST_FILE" .zh.md)
             DIR=$(dirname "$POST_FILE")
 
-            echo "$BASENAME" | grep -qE '\-en$|\.en$' && continue
-
-            EN_FILE="${DIR}/${BASENAME}-en.md"
+            EN_FILE="${DIR}/${BASENAME}.en.md"
             COVER_PNG="static/covers/${BASENAME}.png"
             COVER_JPG="static/covers/${BASENAME}.jpg"
             AUDIO_ZH="static/audio/${BASENAME}.mp3"
