fix: 修复封面图片重复生成逻辑并更新文章封面格式
更新工作流中封面图片生成条件，移除重复的音频变量声明
将文章封面图片从PNG格式统一改为JPG格式
修复文章中的列表格式和添加空白行提升可读性

--- a/.github/workflows/process-diary.yml
+++ b/.github/workflows/process-diary.yml
@@ -132,7 +132,6 @@ jobs:
             EN_FILE="${DIR}/${BASENAME}.en.md"
             COVER_JPG="static/covers/${BASENAME}.jpg"
             AUDIO_ZH="static/audio/${BASENAME}.mp3"
-            AUDIO_ZH="static/audio/${BASENAME}.mp3"
             AUDIO_EN="static/audio/${BASENAME}.en.mp3"
 
             # --- 1. Chinese Summary ---
@@ -144,7 +143,7 @@ jobs:
             fi
 
             # --- 2. Cover Image ---
-            if [ "$FORCE" = "true" ] || { ! [ -f "$COVER_PNG" ] && ! [ -f "$COVER_JPG" ]; }; then
+            if [ "$FORCE" = "true" ] || ! [ -f "$COVER_JPG" ]; then
               echo "🎨 Generating cover..."
               python3 scripts/generate_cover.py "$POST_FILE" || echo "⚠️ Cover failed"
             else
