feat: 添加封面图片处理脚本并关闭禅模式
添加批量处理封面图片的脚本 replace_covers.sh，支持 JPG 和 PNG 格式的缩放和填充
将 hugo.toml 中的 zenMode 参数设为 false

--- a/hugo.toml
+++ b/hugo.toml
@@ -32,7 +32,7 @@ theme = "dream"
       jsDateFormat = "MMM dd, yyyy"
 
 [params]
-zenMode = true
+zenMode = false
 
 lightTheme = "emerald"
 darkTheme = "forest"
