fix: 统一资产命名规范
- 封面: dayN.jpg（无语言后缀）
- 音频: dayN.zh.mp3 / dayN.en.mp3
- 更新 workflow 检测和生成逻辑
- 删除重复的无后缀音频文件

--- a/.github/workflows/process-diary.yml
+++ b/.github/workflows/process-diary.yml
@@ -74,7 +74,7 @@ jobs:
             [ -f "$EN_FILE" ] || MISSING="$MISSING en"
 
             # Check Chinese audio
-            [ -f "static/audio/${BASENAME}.mp3" ] || MISSING="$MISSING audio_zh"
+            [ -f "static/audio/${BASENAME}.zh.mp3" ] || MISSING="$MISSING audio_zh"
 
             # Check English audio
             [ -f "static/audio/${BASENAME}.en.mp3" ] || MISSING="$MISSING audio_en"
@@ -131,7 +131,7 @@ jobs:
 
             EN_FILE="${DIR}/${BASENAME}.en.md"
             COVER_JPG="static/covers/${BASENAME}.jpg"
-            AUDIO_ZH="static/audio/${BASENAME}.mp3"
+            AUDIO_ZH="static/audio/${BASENAME}.zh.mp3"
             AUDIO_EN="static/audio/${BASENAME}.en.mp3"
 
             # --- 1. Chinese Summary ---
