--- a/.github/workflows/process-diary.yml
+++ b/.github/workflows/process-diary.yml
@@ -111,7 +111,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests edge-tts
+          pip install requests edge-tts Pillow
           sudo apt-get update -qq && sudo apt-get install -y -qq ffmpeg
           HUGO_VERSION=0.128.0
           wget -q -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
