--- a/.github/workflows/process-diary.yml
+++ b/.github/workflows/process-diary.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
     inputs:
       post_file:
-        description: "Specific post (e.g., content/posts/2026-02-25-day7.md). Leave empty to auto-detect."
+        description: "Specific post (e.g., content/posts/2026-02-25-day7.zh.md). Leave empty to auto-detect."
         required: false
       force:
         description: "Force regenerate all assets"
@@ -119,8 +119,9 @@ jobs:
 
       - name: Process each post (skip existing assets)
         env:
-          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+          NVIDIA_API_KEY: ${{ secrets.NVIDIA_API_KEY }}
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_BASE: ${{ secrets.LLM_API_BASE }}
           FORCE: ${{ github.event.inputs.force }}
         run: |
           for POST_FILE in ${{ needs.detect.outputs.posts_to_process }}; do
@@ -142,9 +143,9 @@ jobs:
               echo "⏭️ Summary exists"
             fi
 
-            # --- 2. Cover Image ---
+            # --- 2. Cover Image (NVIDIA SD3 Medium) ---
             if [ "$FORCE" = "true" ] || ! [ -f "$COVER_JPG" ]; then
-              echo "🎨 Generating cover..."
+              echo "🎨 Generating cover (NVIDIA SD3)..."
               python3 scripts/generate_cover.py "$POST_FILE" || echo "⚠️ Cover failed"
             else
               echo "⏭️ Cover exists"
@@ -187,7 +188,7 @@ jobs:
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "🦞 Auto-process: summary, cover, translation, audio [CF AI]"
+            git commit -m "🦞 Auto-process: summary, cover, translation, audio [NVIDIA SD3]"
             git pull --rebase origin main && git push
           fi
 
